0.05 - not yet released
 - hide rester password from templates

0.04 - Wed Apr  4 15:37:33 PDT 2007
 - Bug fixes

0.03 - Sat Mar 10 15:09:00 PST 2007
 - Added support for subblogs
   - allows for multiple blog tags under a single blog_config
   - subblogs can be arbitrary tags

0.02 - Sun Feb 25 10:48:00 PST 2007
 - Add Blikistan::MagicEngine::Jemplate
 - Add ability to store templates in a wiki page

0.01 - Wed Feb 21 23:27:17 PST 2007
 - Initial release